--- a/projects/client/i18n/meta/da-dk.json
+++ b/projects/client/i18n/meta/da-dk.json
@@ -75,6 +75,12 @@
     "button_text_watchlist": {
       "default": "Se"
     },
+    "button_text_add_to_watchlist": {
+      "default": "Føj til listen"
+    },
+    "button_text_remove_from_watchlist": {
+      "default": "Fjern fra listen"
+    },
     "button_text_mark_as_watched": {
       "default": "Marker som set"
     },
