--- a/projects/client/i18n/meta/pl-pl.json
+++ b/projects/client/i18n/meta/pl-pl.json
@@ -75,6 +75,12 @@
     "button_text_watchlist": {
       "default": "Do obejrzenia"
     },
+    "button_text_add_to_watchlist": {
+      "default": "Dodaj do listy"
+    },
+    "button_text_remove_from_watchlist": {
+      "default": "Usuń z listy"
+    },
     "button_text_mark_as_watched": {
       "default": "Oznacz jako obejrzany"
     },
